--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<!-- Header section start -->
 	<header class="header-area">
 		<a href="index.html" class="logo-area">
-			<img src="img/logo.png" alt="Car Stone LLC">
+			<img src="img/logo.png" alt="Car Stone LLC" width="100" height="100">
 		</a>
 		<div class="nav-switch">
 			<i class="fa fa-bars"></i>
@@ -59,11 +59,10 @@
 		<div class="left-bar">
 			<div class="left-bar-content">
 				<div class="social-links">
-					<a href="#"><i class="fa fa-pinterest"></i></a>
-					<a href="#"><i class="fa fa-linkedin"></i></a>
+					<a href="#"><i class="fa fa-youtube"></i></a>
 					<a href="#"><i class="fa fa-instagram"></i></a>
 					<a href="#"><i class="fa fa-facebook"></i></a>
-					<a href="#"><i class="fa fa-twitter"></i></a>
+					<a href="#"><i class="fa fa-yelp"></i></a>
 				</div>
 			</div>
 		</div>
@@ -73,7 +72,6 @@
 				<div class="slide-inner">
 					<div class="slide-content">
 					<h2>Car Stone <br>Quality <br> and Luxury</h2>
-					<a href="#" class="site-btn sb-light">See Project</a>
 					</div>
 				</div>
 			</div>	
@@ -87,7 +85,6 @@
 			</div>	
 		</div>
 		<div class="slide-num-holder" id="snh-1"></div>
-		<div class="hero-right-text">architecture</div>
 	</section>
 	<!-- Hero section end -->
 
@@ -355,11 +352,10 @@
 	<footer class="footer-section">
 		<div class="footer-social">
 			<div class="social-links">
-				<a href="#"><i class="fa fa-pinterest"></i></a>
-				<a href="#"><i class="fa fa-linkedin"></i></a>
+				<a href="#"><i class="fa fa-youtube"></i></a>
 				<a href="#"><i class="fa fa-instagram"></i></a>
 				<a href="#"><i class="fa fa-facebook"></i></a>
-				<a href="#"><i class="fa fa-twitter"></i></a>
+				<a href="#"><i class="fa fa-yelp"></i></a>
 			</div>
 		</div>
 		<div class="container">
