--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
 	<!-- Header section start -->   
 	<header class="header-area">
 		<a href="index.html" class="logo-area">
-			<img src="img/logo.png" alt="">
+			<img src="img/logo.png" alt="Car Stone LLC" width="100" height="100">
 		</a>
 		<div class="nav-switch">
 			<i class="fa fa-bars"></i>
