fix to logo mobile

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
 		<div class="nav-switch">
 			<i class="fa fa-bars"></i>
 		</div>
-		<div class="phone-number">503-410-6683</div>
+		<div class="phone-number">971-713-8534</div>
 		<nav class="nav-menu">
 			<ul>
 				<li><a href="index.html">Home</a></li>
@@ -70,15 +70,9 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-3 contact-info mb-5 mb-lg-0">
-					<p>Address: 1481 Creekside Lane Avila Beach, CA 93424 </p>
-					<p>Phone: +53 345 7953 32453</p>
-					<p>Email: yourmail@gmail.com</p>
-					<div class="cf-social">
-						<a href="#"><i class="fa fa-google-plus"></i></a>
-						<a href="#"><i class="fa fa-pinterest"></i></a>
-						<a href="#"><i class="fa fa-facebook"></i></a>
-						<a href="#"><i class="fa fa-twitter"></i></a>
-					</div>
+					<p>Address: Portland, OR 97035 </p>
+					<p>Phone: 971-713-8534</p>
+					<p>Email: carlos@carstoneconstruction.com</p>
 				</div>
 				<div class="col-lg-9">
 					<form class="contact-form">
@@ -90,7 +84,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="map-area" id="map-canvas"></div>
+		<!-- <div class="map-area" id="map-canvas"></div> -->
 	</section>
 	<!-- Page section end -->
 
@@ -100,11 +94,10 @@
 	<footer class="footer-section">
 		<div class="footer-social">
 			<div class="social-links">
-				<a href="#"><i class="fa fa-pinterest"></i></a>
-				<a href="#"><i class="fa fa-linkedin"></i></a>
+				<a href="#"><i class="fa fa-youtube"></i></a>
 				<a href="#"><i class="fa fa-instagram"></i></a>
 				<a href="#"><i class="fa fa-facebook"></i></a>
-				<a href="#"><i class="fa fa-twitter"></i></a>
+				<a href="#"><i class="fa fa-yelp"></i></a>
 			</div>
 		</div>
 		<div class="container">
