--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<!-- Header section start -->
 	<header class="header-area">
 		<a href="index.html" class="logo-area">
-			<img src="img/logo.png" alt="Car Stone LLC" width="100" height="100">
+			<img class="fotologo" src="img/logo.png" alt="Car Stone LLC" width="90" height="90">
 		</a>
 		<div class="nav-switch">
 			<i class="fa fa-bars"></i>
