added contact form

--- a/contact.html
+++ b/contact.html
@@ -68,21 +68,25 @@
 			<div class="section-title pt-5">
 				<h1>Get in touch</h1>
 			</div>
-			<div class="row">
-				<div class="col-lg-3 contact-info mb-5 mb-lg-0">
-					<p>Address: Portland, OR 97035 </p>
-					<p>Phone: 971-713-8534</p>
-					<p>Email: carlos@carstoneconstruction.com</p>
+			<form action="https://carstoneconstruction.us7.list-manage.com/subscribe/post" class="contact-form" method="POST">
+				<input type="hidden" name="u" value="a67db2517019b323c8b505f6f">
+				<input type="hidden" name="id" value="8aa953b8cb">
+				<div class="row">
+					<div class="col-lg-3 contact-info mb-5 mb-lg-0">
+						<p>Address: Portland, OR 97035 </p>
+						<p>Phone: 971-713-8534</p>
+						<p>Email: carlos@carstoneconstruction.com</p>
+					</div>
+					<div class="col-lg-9">
+						<form class="contact-form">
+							<input type="text" name="MERGE1" placeholder="Enter your name">
+							<input type="email" name="MERGE0" placeholder="Enter your email address">
+							<textarea name="MERGE2" placeholder="Message ..."></textarea>
+							<button name="submit" class="site-btn sb-dark">Send</button>
+						</form>
+					</div>
 				</div>
-				<div class="col-lg-9">
-					<form class="contact-form">
-						<input type="text" placeholder="Enter your name">
-						<input type="text" placeholder="Enter your email address">
-						<textarea placeholder="Message ..."></textarea>
-						<button class="site-btn sb-dark">Send</button>
-					</form>
-				</div>
-			</div>
+			</form>
 		</div>
 		<!-- <div class="map-area" id="map-canvas"></div> -->
 	</section>
